sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value temp
    setValue(j,temp)
               ^